--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ compileJava {
 dependencies {
 
 
-
+    implementation 'com.github.groovy-wslite:groovy-wslite:1.1.2'
     implementation "org.codehaus.groovy:groovy-all:2.4.15"
     implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'
 
