--- a/build.gradle
+++ b/build.gradle
@@ -71,8 +71,17 @@ application {
 jar {
     manifest {
         attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                //'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                 'Main-Class': 'com.mx.finerio.ApplicationMain'
         )
     }
+}
+
+task customFatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'com.mx.finerio.ApplicationMain'
+    }
+    baseName = 'all-in-one-jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
